fixed alignment

--- a/src/styles/screen.sass
+++ b/src/styles/screen.sass
@@ -247,30 +247,27 @@ $navigation__transition: max-height 0.5s ease-in-out
 #about
   background-color: rgba($tan, 0.90)
   height: 400px
-  padding: 125px 125px 190px 125px
+  padding: 125px 0px 190px 0px
   text-align: center
 
 .columns
   display: flex
   flex-direction: row
   line-height: 20px
-  margin-left: 50px
-  margin-right: -50px
   padding: 0
 
 .education
   display: flex
   flex-direction: column
-  width: 500px
-  margin-right: 100px
   font-weight: lighter
+  padding: 0 50px 0 50px
+
 
 .extraCir
   display: flex
   flex-direction: column
-  width: 500px
-  margin-right: 50px
   font-weight: lighter
+  padding: 0 50px 0 50px
 
 .aboutMe
   display: flex
@@ -703,11 +700,9 @@ button
   .extraCir
     display: flex
     justify-content: center
-    width: 100%
   .education
     display: flex
     justify-content: center
-    width: 100%
   .groups
     display: flex
     justify-content: center
@@ -780,3 +775,8 @@ button
       height: 100%
     .aboutMe p
       width: 100%
+      padding: 0
+
+// Audio
+.audio
+  an
